# Orange-Drum-Explorer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  Solver.cpp  Solver.h  test_external.cpp  test_solver.cpp
performance/: Makefile  performance.md  scenario1.cpp  scenario2.cpp  scenario3.cpp
performance/debug/: Makefile
performance/fully_optimized/: Makefile
performance/optimized/: Makefile
